--- a/navbar.html
+++ b/navbar.html
@@ -19,78 +19,60 @@
 </head>
 
 <body>
-    <div class="navbar">
+    <nav>
+        <div class="navbar">
 
-        <div class="box"><img id="logo" src="./images/eco-club-logo.jpg.jpg" alt="">
-            <h3 id="heading-name">Eco-Club</h3>
-        </div>
-
-
-        <div class="box" id="logo-box">
-            &nbsp
-
-            <!--............... dropdown menu ................. -->
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                    aria-expanded="false">
-
-                    <!--................ icon    .............. -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                        class="bi bi-list" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-                    </svg>
-
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#"> HOME</a></li>
-                    <li><a class="dropdown-item" href="#"> NOIXORGO</a></li>
-                    <li><a class="dropdown-item" href="#"> GALLERY</a></li>
-                    <li><a class="dropdown-item" href="#"> EVENTS</a></li>
-                    <li><a class="dropdown-item" href="#"> BLOG</a></li>
-                    <li><a class="dropdown-item" href="#"> TEAM</a></li>
-                </ul>
+            <div class="box"><img id="logo" src="./images/eco-club-logo.jpg.jpg" alt="">
+                <h3 id="heading-name">Eco-Club</h3>
             </div>
 
-            <!--........... logo-box end....... -->
+
+            <div class="box" id="logo-box">
+                &nbsp
+
+                <!--............... dropdown menu ................. -->
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+
+                        <!--................ icon    .............. -->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-list" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd"
+                                d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                        </svg>
+
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#"> HOME</a></li>
+                        <li><a class="dropdown-item" href="#"> NOIXORGO</a></li>
+                        <li><a class="dropdown-item" href="#"> GALLERY</a></li>
+                        <li><a class="dropdown-item" href="#"> EVENTS</a></li>
+                        <li><a class="dropdown-item" href="#"> BLOG</a></li>
+                        <li><a class="dropdown-item" href="#"> TEAM</a></li>
+                    </ul>
+                </div>
+
+                <!--........... logo-box end....... -->
+            </div>
+
+
+            <!--............................ links  ............................ -->
+
+            <div id="box-3" class="box hide">
+
+                <ul class="hide">
+                    <li class="hide-element"><a href="">HOME</a></li>
+                    <li class="hide-element"><a href="">NOIXORGO</a></li>
+                    <li class="hide-element"><a href="">GALLERY</a></li>
+                    <li class="hide-element"><a href="">EVENTS</a></li>
+                    <li class="hide-element"><a href="">BLOG</a></li>
+                    <li class="hide-element"><a href="">TEAM</a></li>
+                </ul>
+            </div>
         </div>
+    </nav>
 
-
-        <!--............................ links  ............................ -->
-
-        <div id="box-3" class="box hide">
-
-            <ul class="hide">
-                <li class="hide-element"><a href="">HOME</a></li>
-                <li class="hide-element"><a href="">NOIXORGO</a></li>
-                <li class="hide-element"><a href="">GALLERY</a></li>
-                <li class="hide-element"><a href="">EVENTS</a></li>
-                <li class="hide-element"><a href="">BLOG</a></li>
-                <li class="hide-element"><a href="">TEAM</a></li>
-            </ul>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        </div>
-
-    </div>
 
 
 
