--- a/footer.html
+++ b/footer.html
@@ -1,89 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-        .containeer{
+
+        .containeer {
             box-sizing: border-box;
             background-color: #5A5A5A;
             display: flex;
-            padding:10px 75px;
+            padding: 10px 75px;
             justify-content: space-around;
         }
-        p{
+
+        .footer-p {
             color: rgba(5, 158, 5, 0.949);
             font-weight: bolder;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             padding-bottom: 40px;
         }
-        .box{
+
+        .box {
             color: rgba(5, 158, 5, 0.949);
             display: flex;
             flex-direction: column;
-            /* width: 25%; */    
+            /* width: 25%; */
             padding-top: 25px;
             padding-bottom: 25px;
         }
-        .box_1{
+
+        .box_1 {
             display: flex;
             flex-direction: row;
             padding-bottom: 15px;
         }
-         .kuch{
-        color:white;
+
+        .kuch {
+            color: white;
         }
-        .box_1 i{
+
+        .box_1 i {
             margin-right: 18px;
         }
-        .box_1 a{
+
+        .box_1 a {
             color: white;
             font-style: normal;
-            text-decoration: none;    
+            text-decoration: none;
         }
-        .box li{
+
+        .box li {
             list-style: none;
             padding-bottom: 15px;
         }
-        .box li a{
+
+        .box li a {
             color: white;
-            text-decoration: none;    
+            text-decoration: none;
         }
-        .dash{
+
+        .dash {
             margin-right: 15px;
         }
-        a:hover{
+
+        a:hover {
             color: none;
             cursor: pointer;
         }
-        input[type=email]{
-          background-color: rgba(255, 255, 255, 0.397);
-          color: white;
-          border-left: 2px solid #5A5A5A;
-          border-top: 2px solid #5A5A5A;
-          border-bottom: 2px solid #5A5A5A;
-          padding: 8px;
-          border-top-left-radius: 5px;
-          border-bottom-left-radius: 5px;
-          overflow: hidden;
-          width: 100%;
-          outline: none;
-          /*background-color: rgba(128, 128, 128, 0.797);*/
+
+        input[type=email] {
+            background-color: rgba(255, 255, 255, 0.397);
+            color: white;
+            border-left: 2px solid #5A5A5A;
+            border-top: 2px solid #5A5A5A;
+            border-bottom: 2px solid #5A5A5A;
+            padding: 8px;
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+            overflow: hidden;
+            width: 100%;
+            outline: none;
+            /*background-color: rgba(128, 128, 128, 0.797);*/
         }
-        #mail{
+
+        #mail {
             display: flex;
             flex-direction: row;
             align-items: center;
         }
-        #mail i{
+
+        #mail i {
             background-color: grey;
             color: #ffffff;
             padding: 6.5px;
@@ -94,140 +111,152 @@
             border-bottom-right-radius: 5px;
 
         }
-        @media screen and (max-width: 410px){
-            .containeer{
-                 flex-direction: column;
-                 /* width:100%; */
+
+        @media screen and (max-width: 410px) {
+            .containeer {
+                flex-direction: column;
+                /* width:100%; */
             }
-            .box,.box_1{
+
+            .box,
+            .box_1 {
                 text-align: center;
             }
 
         }
-        @media screen and (min-width:410px) and (max-width:1080px){
-            .containeer{
+
+        @media screen and (min-width:410px) and (max-width:1080px) {
+            .containeer {
                 flex-direction: column;
-                
+
             }
-    }
+        }
     </style>
 </head>
+
 <body>
     <footer>
         <div class="containeer">
-            <div class="box"><p>Contact Us</p>
-            <div class="box_1">
-                <div>
-                <i class="fa-solid fa-phone"></i>
-                </div>
-                <div class="kuch">+91 1234567890</div>
-            </div>
-            <div class="box_1">
-                <div>
-                <i class="fa-solid fa-location-dot"></i>
-                </div>
-                <div>
-                <a href="https://www.google.com/maps/place/National+Institute+Of+Technology,+Silchar/@24.7577144,92.7901042,17z/data=!3m1!4b1!4m5!3m4!1s0x374e49dcb63bae9b:0x81efa836714a289b!8m2!3d24.7577144!4d92.7922929" target="_blank">NIT SILCHAR</a>
-                </div>
-            </div>
-            <div class="box_1">
-                <div>
-                <i class="fa-regular fa-envelope"></i>
-                </div>
-                <div>
-                <a href="mailto: ecoclubactivity@nits.ac.in" target="blank">ecoclubactivity@nits.ac.in</a>
-                </div>
-            </div>
-            <div class="box_1">
-                <div>
-                <i class="fa-brands fa-instagram"></i>
-                </div>
-                <div>
-                <a href="https://www.instagram.com/eco_club_nits/" target="blank">eco_club_nits</a>
-                </div>
-            </div>
-            <div class="box_1">
-                <div>
-                <i class="fa-brands fa-facebook"></i>
-                </div>
-                <div>
-                <a href="https://l.instagram.com/?u=https%3A%2F%2Fm.facebook.com%2Fnitsecoclub%2F%3Ftsid%3D0.7935080479496242%26source%3Dresult&e=ATP7jhg69HRisUR1Cv9UkrgE14602QuQBSYfivVTCdVj7Sg0bUUJuJAGhLgxOqhLhkexllnJJsnX4qKnBHr7Qw&s=1" target="_blank">@nitsecoclub</a>
-                </div>
-            </div>
-            <div class="box_1">
-                <div>
-                <i class="fa-brands fa-twitter"></i>
-                </div>
-                <div>
-                <a href="https://twitter.com/NitsEco" target="_blank">@NitsEco</a>
-                </div>
-            </div>
-        </div>
-        <div class="box"><p>Quick Links</p>
-            <ul>
-                <li>
+            <div class="box">
+                <p class="footer-p">Contact Us</p>
                 <div class="box_1">
-                    <div class="dash">-</div>
                     <div>
-                        <a href="#">Noixorgo</a>
+                        <i class="fa-solid fa-phone"></i>
+                    </div>
+                    <div class="kuch">+91 1234567890</div>
+                </div>
+                <div class="box_1">
+                    <div>
+                        <i class="fa-solid fa-location-dot"></i>
+                    </div>
+                    <div>
+                        <a href="https://www.google.com/maps/place/National+Institute+Of+Technology,+Silchar/@24.7577144,92.7901042,17z/data=!3m1!4b1!4m5!3m4!1s0x374e49dcb63bae9b:0x81efa836714a289b!8m2!3d24.7577144!4d92.7922929"
+                            target="_blank">NIT SILCHAR</a>
                     </div>
                 </div>
-                </li>
-                <li>
                 <div class="box_1">
-                        <div class="dash">-</div>
-                        <div>
-                            <a href="#">Our Events</a>
-                        </div>
+                    <div>
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div>
+                        <a href="mailto: ecoclubactivity@nits.ac.in" target="blank">ecoclubactivity@nits.ac.in</a>
+                    </div>
                 </div>
-                </li>
-                <li>
                 <div class="box_1">
+                    <div>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                    <div>
+                        <a href="https://www.instagram.com/eco_club_nits/" target="blank">eco_club_nits</a>
+                    </div>
+                </div>
+                <div class="box_1">
+                    <div>
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+                    <div>
+                        <a href="https://l.instagram.com/?u=https%3A%2F%2Fm.facebook.com%2Fnitsecoclub%2F%3Ftsid%3D0.7935080479496242%26source%3Dresult&e=ATP7jhg69HRisUR1Cv9UkrgE14602QuQBSYfivVTCdVj7Sg0bUUJuJAGhLgxOqhLhkexllnJJsnX4qKnBHr7Qw&s=1"
+                            target="_blank">@nitsecoclub</a>
+                    </div>
+                </div>
+                <div class="box_1">
+                    <div>
+                        <i class="fa-brands fa-twitter"></i>
+                    </div>
+                    <div>
+                        <a href="https://twitter.com/NitsEco" target="_blank">@NitsEco</a>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+                <p class="footer-p">Quick Links</p>
+                <ul>
+                    <li>
+                        <div class="box_1">
+                            <div class="dash">-</div>
+                            <div>
+                                <a href="#">Noixorgo</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="box_1">
+                            <div class="dash">-</div>
+                            <div>
+                                <a href="#">Our Events</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="box_1">
                             <div class="dash">-</div>
                             <div>
                                 <a href="#">Our Blogs</a>
                             </div>
-                </div>
-                </li>
-                <li>
-                <div class="box_1">
-                        <div class="dash">-</div>
-                        <div>
-                            <a href="#">Our Gallery</a>
                         </div>
-                </div>
-                </li>
-                <li>
-                <div class="box_1">
-                        <div class="dash">-</div>
-                        <div>
-                            <a href="#">Our Team</a>
-                        </div>
-                </div>
-                </li>
-            </ul>
-        </div>
-        <div class="box"><p>Developers</p>
-            <ul>
-                <li>
-                    <div class="box_1">
-                        <div class="dash">-</div>
-                        <div>
-                           <a href="#">Members</a>
-                        </div>
-                    </div>
                     </li>
-            </ul>
-        </div>
-        <div class="box"><p>Mail Us</p>
-            <div class="box_1" id="mail">
-        <form action="">
-            <input type="email" name="email" id="email" required placeholder="@your email.com">
-        </form>
-        <i class="fa-solid fa-paper-plane"></i>
-        </div>
-        </div>
+                    <li>
+                        <div class="box_1">
+                            <div class="dash">-</div>
+                            <div>
+                                <a href="#">Our Gallery</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="box_1">
+                            <div class="dash">-</div>
+                            <div>
+                                <a href="#">Our Team</a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="box">
+                <p class="footer-p">Developers</p>
+                <ul>
+                    <li>
+                        <div class="box_1">
+                            <div class="dash">-</div>
+                            <div>
+                                <a href="#">Members</a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="box">
+                <p class="footer-p">Mail Us</p>
+                <div class="box_1" id="mail">
+                    <form action="">
+                        <input type="email" name="email" id="email" required placeholder="@your email.com">
+                    </form>
+                    <i class="fa-solid fa-paper-plane"></i>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
+
 </html>
